--- a/media/templates/collectionwidget_quickedit.mustache
+++ b/media/templates/collectionwidget_quickedit.mustache
@@ -12,5 +12,5 @@
           <div id="asset-view-details-quick-edit" class="asset-view-details">
           </div>
         </div>
-    </div> {{! end asset-view-container }}
+    </div>
 </div>
