--- a/media/templates/collectionwidget.mustache
+++ b/media/templates/collectionwidget.mustache
@@ -8,74 +8,76 @@
     </div>
     <div class="media-column" >
         <div class="filter-widget" style="display: none">
-            <div class="collection-col-3">
-                <div class="switcher-tool switcher-search-text input-group">
-                    <span class="input-group-addon"><span class="glyphicon glyphicon-search"></span></span>
-                    <input type="text" class="form-control" name="search-text"
-                        value="{{active_filters.search_text}}" placeholder="Item &amp; selection titles"/>
-                    <span class="input-group-btn">
-                        <button class="btn btn-default btn-search-text" type="button">Go</button>
-                    </span>
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="switcher-tool switcher-search-text input-group">
+                        <span class="input-group-addon"><span class="glyphicon glyphicon-search"></span></span>
+                        <input type="text" class="form-control" name="search-text"
+                            value="{{active_filters.search_text}}" placeholder="Item &amp; selection titles"/>
+                        <span class="input-group-btn">
+                            <button class="btn btn-default btn-search-text" type="button">Go</button>
+                        </span>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="collection-chooser-container"></div>
                 </div>
             </div>
+            <div class="spacer"></div>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="switcher-tool">
+                        <span class="course-tags-prefix">Tags </span>
+                        <select class="course-tags"
+                            data-placeholder="Select tags" 
+                            multiple="multiple">
+                            {{#active_tags}}
+                                <option value="{{name}}">{{name}}</option>
+                            {{/active_tags}}
+                        </select>
+                    </div>
+               </div>
 
-            <div class="collection-col-3">
-                <div class="collection-chooser-container"></div>
-            </div>
+               <div class="col-md-5">
+                    <div class="switcher-tool">
+                        <span class="concept-prefix" title="{{Terms}}">Terms</span>
+                        <select class="vocabulary"
+                            data-placeholder="Select {{#lower}}{{display_name}}{{/lower}}"
+                            multiple="multiple">
 
-            <div class="collection-col-3">
-                <div class="switcher-tool">
-                    <span class="course-tags-prefix">Tags </span>
-                    <select class="course-tags"
-                        data-placeholder="Select tags" 
-                        multiple="multiple">
-                        {{#active_tags}}
-                            <option value="{{name}}">{{name}}</option>
-                        {{/active_tags}}
-                    </select>
+                            {{#active_vocabulary}}
+                            <optgroup data-id="vocabulary-{{id}}" label="{{display_name}}">
+                                {{#term_set}}
+                                    <option value="{{id}}">
+                                        {{display_name}} ({{count}})
+                                    </option>
+                                {{/term_set}}
+                            </optgroup>
+                            {{/active_vocabulary}}
+                        </select>
+                    </div>
                 </div>
-           </div>
+                <div class="col-md-3">
+                    <div class="switcher collection-date-filter switcher-tool">
+                        <a class="switcher-top menuclosed" onclick="return switcher(event, this);">
+                            <span class="switcher-prefix">Date </span>
+                            <span class="down-arrow"></span>
 
-           <div class="collection-col-3">
-                <div class="switcher-tool">
-                    <span class="concept-prefix" title="{{Terms}}">Terms</span>
-                    <select class="vocabulary"
-                        data-placeholder="Select {{#lower}}{{display_name}}{{/lower}}"
-                        multiple="multiple">
+                            {{#active_filters.modified}}
+                                <span class="title">{{active_filters.modified}}</span>
+                            {{/active_filters.modified}}
 
-                        {{#active_vocabulary}}
-                        <optgroup data-id="vocabulary-{{id}}" label="{{display_name}}">
-                            {{#term_set}}
-                                <option value="{{id}}">
-                                    {{display_name}} ({{count}})
-                                </option>
-                            {{/term_set}}
-                        </optgroup>
-                        {{/active_vocabulary}}
-                    </select>
-                </div>
-            </div>
-
-            <div class="collection-col-2">
-                <div class="switcher collection-date-filter switcher-tool">
-                    <a class="switcher-top menuclosed" onclick="return switcher(event, this);">
-                        <span class="switcher-prefix">Date </span>
-                        <span class="down-arrow"></span>
-
-                        {{#active_filters.modified}}
-                            <span class="title">{{active_filters.modified}}</span>
-                        {{/active_filters.modified}}
-
-                        {{^active_filters.modified}}
-                            <span class="title">all</span>
-                        {{/active_filters.modified}}
-                    </a>
-                    <ul class="switcher-options">
-                        <li><a class="switcher-choice filterbydate" href="all">all</a></li>
-                        <li><a class="switcher-choice filterbydate" href="today">today</a></li>
-                        <li><a class="switcher-choice filterbydate" href="yesterday">yesterday</a></li>
-                        <li><a class="switcher-choice filterbydate" href="lastweek">within the last week</a></li>
-                    </ul>
+                            {{^active_filters.modified}}
+                                <span class="title">all</span>
+                            {{/active_filters.modified}}
+                        </a>
+                        <ul class="switcher-options">
+                            <li><a class="switcher-choice filterbydate" href="all">all</a></li>
+                            <li><a class="switcher-choice filterbydate" href="today">today</a></li>
+                            <li><a class="switcher-choice filterbydate" href="yesterday">yesterday</a></li>
+                            <li><a class="switcher-choice filterbydate" href="lastweek">within the last week</a></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>  {{! end filter widget }}
