--- a/mediathread/templates/base.html
+++ b/mediathread/templates/base.html
@@ -203,7 +203,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <h4 class="modal-title">Collection</h4>
+                    <h4 class="modal-title">Course Collection</h4>
                 </div>
                 <div class="modal-body">
                     <div class="quick-edit" style="display: none"></div>
