:arrow_up: ravenjs 3.8.1

--- a/mediathread/templates/base.html
+++ b/mediathread/templates/base.html
@@ -338,7 +338,7 @@
 {% endif %}
 
 {% if not debug %}
-<script src="//cdn.ravenjs.com/1.2.0/jquery,native/raven.min.js"></script>
+<script src="https://cdn.ravenjs.com/3.8.1/raven.min.js"></script>
 <script>
  Raven.config('https://49021d8321684c2f9fe0fde14fbcdf8a@sentry.ccnmtl.columbia.edu/33', {
      whitelistUrls: [/mediathread\.stage\.ccnmtl\.columbia\.edu/]
