Update raven config for hosted sentry

--- a/mediathread/templates/base.html
+++ b/mediathread/templates/base.html
@@ -340,7 +340,7 @@
 {% if not debug %}
 <script src="https://cdn.ravenjs.com/3.8.1/raven.min.js"></script>
 <script>
- Raven.config('https://49021d8321684c2f9fe0fde14fbcdf8a@sentry.ccnmtl.columbia.edu/33', {
+ Raven.config('https://a22770cb4ac744bbaf2b1ec76281e7ed@sentry.io/102468', {
      whitelistUrls: [/mediathread\.stage\.ccnmtl\.columbia\.edu/]
  }).install();
  {% if user.is_anonymous %}
