--- a/media/juxtapose/css/juxtapose.css
+++ b/media/juxtapose/css/juxtapose.css
@@ -116,13 +116,19 @@ button.jux-play {
     max-width: 300px;
 }
 
+.jux-text-display-container {
+    background-color: #f5f5f5;
+    border: 1px solid  #ddd;
+    margin-bottom: 5px;
+    height: 110px;
+    padding: 10px 0;
+}
+
 .jux-text-display {
-    min-height: 54px;
-    height: 100%;
-    background-color: #dedede;
-    text-align: center;
-    max-width: 400px;
+    background-color: #f5f5f5;
     margin: 0 auto;
+    width: 500px;
+    height: 90px;
 }
 
 .jux-track-element-manager {
