--- a/media/juxtapose/css/playhead.css
+++ b/media/juxtapose/css/playhead.css
@@ -1,5 +1,6 @@
 .jux-playhead-container {
     height: 0;
+    margin: 0 30px 0 55px
 }
 
 .jux-playhead-line {
@@ -8,26 +9,27 @@
     background-color: #000;
     position: absolute;
     z-index: 50;
+    margin-top: -2px;
 }
 
 .jux-playhead-line .jux-playhead-top-cutpoint,
 .jux-playhead-line .jux-playhead-bottom-cutpoint {
     position: relative;
     width: 1px;
-    margin-left: -20px;
+    margin-left: -7px;
 }
 
 .jux-playhead-line .jux-playhead-top-cutpoint {
-    border-left: 20px solid transparent;
-    border-right: 20px solid transparent;
-    border-top: 20px solid black;
+    border-left: 8px solid transparent;
+    border-right: 8px solid transparent;
+    border-top: 8px solid black;
 }
 
 .jux-playhead-line .jux-playhead-bottom-cutpoint {
     top: 204px;
-    border-left: 20px solid transparent;
-    border-right: 20px solid transparent;
-    border-bottom: 20px solid black;
+    border-left: 8px solid transparent;
+    border-right: 8px solid transparent;
+    border-bottom: 8px solid black;
 }
 
 input[type=range] {
