--- a/media/juxtapose/css/juxtapose.css
+++ b/media/juxtapose/css/juxtapose.css
@@ -3,7 +3,12 @@ button.jux-play {
     float: left;
     border: 0;
     height: 50px;
-    width: 30px;
+    width: 35px;
+    outline: none;
+}
+
+button.jux-play span.glyphicon {
+    color: black;
 }
 
 .form-group {
@@ -20,8 +25,6 @@ button.jux-play {
     cursor: move;
     position: absolute;
     display: flex;
-    border: 1px dashed blue;
-    background-color: rgba(173, 216, 230, 0.4);
     text-align: center;
     overflow: hidden;
     padding-top: 5px;
@@ -74,13 +77,53 @@ button.jux-play {
     line-height: 30px;
     width: 100%;
     padding: 0 10px;
+    font-size: 1.3em;
+}
+
+.jux-track-container .track-icon {
+    width: 55px;
+    height: 50px;
+    background-color: #ddd;
+    float: left;
+    border: 1px solid #ccc;
+}
+
+.jux-track-container.txt .track-icon:before {
+    content: "T";
+    font-family: "Georgia, serif";
+    margin: 34% 28%;
+    display: inline-block;
+    font-size: 36px;
+    font-weight: bold;
+}
+
+.jux-track-container.media {
+    margin-top: 0;
+}
+
+.jux-track-container.media .track-icon:before {
+    content:"\e009";
+    font-family:"Glyphicons Halflings";
+    line-height: 1;
+    display:inline-block;
+    font-size: 28px;
+    margin: 20% 25%;
+}
+
+.jux-track-container.media .react-grid-item {
+    background-color: #ccc;
+}
+
+.jux-track-container.txt .react-grid-item {
+    background-color: #ddd;
 }
 
 .jux-track {
-    border: 1px dashed black;
+    border: 1px solid #ddd;
     height: 50px;
     cursor: pointer;
-    margin: 0 30px 0 0;
+    margin: 0 30px 0 55px;
+    background-color: #f5f5f5
 }
 
 .jux-track>.react-grid-layout {
@@ -202,12 +245,12 @@ button.jux-play {
 .jux-timeline-ruler {
     height: 21px;
     position: relative;
-    margin: 0 30px 0 55px;
+    margin: 0 30px 0 60px;
 }
 
 .jux-timeline-hline {
     height: 1px;
-    top: 19px;
+    top: 20px;
     position: relative;
     border-bottom: 1px solid #000;
 }
@@ -227,7 +270,7 @@ button.jux-play {
 
 .jux-timeline-tick {
     display: inline-block;
-    top: 19px;
+    top: 20px;
     width: 2px;
     height: 9px;
     background-color: #000;
