--- a/media/juxtapose/css/playhead.css
+++ b/media/juxtapose/css/playhead.css
@@ -1,6 +1,6 @@
 .jux-playhead-container {
     height: 0;
-    margin: 0 30px 0 55px
+    margin: 0 30px 0 60px
 }
 
 .jux-playhead-line {
@@ -9,7 +9,7 @@
     background-color: #000;
     position: absolute;
     z-index: 50;
-    margin-top: -2px;
+    margin-top: -1px;
 }
 
 .jux-playhead-line .jux-playhead-top-cutpoint,
@@ -26,7 +26,7 @@
 }
 
 .jux-playhead-line .jux-playhead-bottom-cutpoint {
-    top: 88px;
+    top: 86px;
     border-left: 8px solid transparent;
     border-right: 8px solid transparent;
     border-bottom: 8px solid black;
@@ -40,6 +40,7 @@ input[type=range] {
     position: relative;
     top: 100px;
     margin: 0;
+    border: 0;
 }
 
 input[type=range]:focus {
