--- a/media/juxtapose/css/juxtapose.css
+++ b/media/juxtapose/css/juxtapose.css
@@ -122,7 +122,7 @@ button.jux-play span.glyphicon {
     border: 1px solid #ddd;
     height: 50px;
     cursor: pointer;
-    margin: 0 30px 0 55px;
+    margin-left: 55px;
     background-color: #f5f5f5
 }
 
@@ -304,7 +304,7 @@ button.jux-play span.glyphicon {
 .jux-timeline-ruler {
     height: 21px;
     position: relative;
-    margin: 0 30px 0 60px;
+    margin-left: 55px;
 }
 
 .jux-timeline-hline {
