--- a/media/juxtapose/css/juxtapose.css
+++ b/media/juxtapose/css/juxtapose.css
@@ -25,9 +25,14 @@ button.jux-play span.glyphicon {
     position: absolute;
     display: flex;
     text-align: center;
-    overflow: hidden;
     padding-top: 5px;
     padding-bottom: 5px;
+}
+
+.jux-track-manager-button {
+    cursor: pointer;
+    position: relative;
+    top: 42px;
 }
 
 .react-grid-item .jux-media-item-middle {
