--- a/media/juxtapose/css/playhead.css
+++ b/media/juxtapose/css/playhead.css
@@ -7,7 +7,7 @@
     height: 100px;
     width: 2px;
     background-color: #000;
-    position: absolute;
+    position: relative;
     z-index: 50;
     margin-top: -1px;
 }
