Remove float: left; from react-grid-layout - PMT #109149

--- a/media/juxtapose/css/juxtapose.css
+++ b/media/juxtapose/css/juxtapose.css
@@ -146,7 +146,8 @@ button.jux-play span.glyphicon {
 }
 
 .jux-track>.react-grid-layout {
-    float: left;
+    position: relative;
+    bottom: 51px;
 }
 
 .jux-track .jux-snap-column {
