Hide editable parts of sequence tool when submitted - PMT #109154
Also add the 'submitted' value to the view instance. React will pick it
up from here.

--- a/media/css/mediathread.css
+++ b/media/css/mediathread.css
@@ -4662,3 +4662,12 @@ collection-modal .col-md-2 {
 .spacer {
     margin-top: 10px;
 }
+
+/* Sequence assignment submitted state */
+#sequence.submitted .jux-playhead-line .jux-playhead-bottom-cutpoint {
+    display: none;
+}
+
+#sequence.submitted .jux-playhead-line {
+    height: 10px;
+}
