text annotation display: break words to fill space

--- a/media/juxtapose/css/juxtapose.css
+++ b/media/juxtapose/css/juxtapose.css
@@ -238,6 +238,7 @@ button.jux-play span.glyphicon {
     margin: 0 auto;
     width: 500px;
     height: 70px;
+    overflow-wrap: break-word;
 }
 
 .jux-track-element-manager {
