--- a/media/juxtapose/css/juxtapose.css
+++ b/media/juxtapose/css/juxtapose.css
@@ -177,11 +177,6 @@ button.jux-play span.glyphicon {
     border-right: 10px solid black;
     height: 360px;
     width: 490px;
-    text-align: center;
-}
-
-.jux-spine-display .jux-spine-revise {
-    display: none;
 }
 
 .jux-spine-display .instructions,
@@ -191,14 +186,19 @@ button.jux-play span.glyphicon {
     line-height: 1.4em;
 }
 
-.jux-spine-revise:hover,
-.jux-spine-display:hover .jux-spine-revise {
-    display: block;
-}
-
+.jux-spine-display .jux-spine-edit,
 .jux-spine-display .jux-spine-revise {
+    display: none;
+    width: 40px;
     position: relative;
     bottom: 34px;
+    margin-right: 5px;
+}
+
+.jux-spine-revise:hover,
+.jux-spine-display:hover .jux-spine-revise,
+.jux-spine-display:hover .jux-spine-edit {
+    display: inline;
 }
 
 .jux-media-display .help-text {
