SequenceAssignment - add create link on the homepage

--- a/media/templates/homepage.mustache
+++ b/media/templates/homepage.mustache
@@ -47,6 +47,7 @@
             <input type="submit" value="Create Composition Assignment" />
         </form>
         <a href="/project/create/sa/">Create Selection Assignment</a>
+        <a href="/project/create/ja/">Create Sequence Assignment</a>
         <hr class="divideLinks" />
         <form action="/project/create/" method="post">
             <input type="hidden" name="project_type" value="composition"/>
