--- a/mediathread/templates/help/help_contentarea.html
+++ b/mediathread/templates/help/help_contentarea.html
@@ -205,6 +205,19 @@
         {% endif %}
     {% endifequal %}
 
+    {% ifequal help_id "help_sequence_assignment" %}
+        <p>A sequence assignment allows students to line up a "primary"
+        selection of video or audio against multiple "secondary" selections
+        and/or annotations. The secondary selections will appear at designated
+        points when the primary selection plays.</p>
+
+        <p>This assignment assesses how students juxtapose a primary
+        media object against other media selections (ie, visual annotations) or a
+        series of thoughts (ie, textual annotations). Students may be asked to display
+        correlations or contrasts in context, or to prepare a set of annotations that
+        appear as a media selection plays.</p>
+    {% endifequal %}
+
     {% ifequal help_id "help_homepage_explore_column" %}
         <strong>The Collection Section</strong>
 
