--- a/media/juxtapose/css/juxtapose.css
+++ b/media/juxtapose/css/juxtapose.css
@@ -273,6 +273,9 @@ button.jux-play span.glyphicon {
     width: 500px;
     height: 70px;
     overflow-wrap: break-word;
+    text-align: center;
+    font-size: 1.1em;
+    line-height: 1.3em;
 }
 
 .jux-track-element-manager {
