--- a/media/juxtapose/css/juxtapose.css
+++ b/media/juxtapose/css/juxtapose.css
@@ -29,28 +29,6 @@ button.jux-play span.glyphicon {
     padding-bottom: 5px;
 }
 
-.react-grid-item .jux-track-manager-button {
-    visibility: hidden;
-}
-
-.react-grid-item:hover .jux-track-manager-button {
-    visibility: visible;
-}
-
-.jux-track-manager-button {
-    cursor: pointer;
-    position: relative;
-    width: 0;
-}
-
-.jux-media .jux-track-manager-button {
-    top: -24px;
-}
-
-.jux-txt .jux-track-manager-button {
-    top: 42px;
-}
-
 .react-grid-item .jux-media-item-middle {
     flex-grow: 1;
 }
@@ -279,21 +257,40 @@ button.jux-play span.glyphicon {
 }
 
 .jux-track-element-manager {
-    margin-top: 10px;
+    border: 1px solid #ccc;
     padding: 10px;
     background-color: lightyellow;
 }
 
-.jux-track-element-manager h2 {
-    font-weight: normal;
+.jux-track-container.jux-track-element-manager .track-icon {
+    border: 0;
+    height: auto;
+    background-color: lightyellow;
+}
+
+.jux-track-element-manager .track-icon:before {
+    content:"\e140";
+    font-family:"Glyphicons Halflings";
+    line-height: 1;
+    display:inline-block;
+    font-size: 26px;
+    margin: 18% 6%;
+    filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=1);
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    transform: rotate(45deg);
 }
 
 .jux-track-element-manager .form-group {
-    margin-left: 10px;
+    margin-right: 30px;
+    vertical-align: top;
 }
 
-.jux-remove-track-element {
-    margin-top: 10px;
+.jux-track-element-manager textarea {
+    width: 400px !important;
+    height: 72px;
 }
 
 .jux-popup-close {
@@ -419,4 +416,5 @@ button.jux-play span.glyphicon {
 
 .jux-timecode-editor.input-group input[type="number"] {
     width: 54px;
+    margin-right: 3px;
 }
