SequenceAssignment: associate current_project with the response
Previously, the ProjectSequenceAssignment was attaching to the assignment rather
than the current student response.

--- a/mediathread/templates/base.html
+++ b/mediathread/templates/base.html
@@ -230,8 +230,8 @@
                 {% if course %}
                     this.current_course = {{ course.pk }};
                 {% endif %}
-                {% if assignment %}
-                    this.current_project = {{ assignment.pk }};
+                {% if the_response %}
+                    this.current_project = {{the_response.pk }};
                 {% endif %}
                 this.flags = [
                     {% flag "collection-widget" %}
