--- a/mediathread/templates/base.html
+++ b/mediathread/templates/base.html
@@ -9,7 +9,8 @@
 
         <script type="text/javascript" src='{% static "jquery/js/jquery-2.2.4.min.js" %}'></script>
         {% bootstrap_javascript %}
-        <script type="text/javascript" src='{% static "jquery/js/jquery-ui.min.js" %}'></script>
+        <script src='{% static "jquery/js/jquery-ui.min.js" %}'></script>
+        <script src='{% static "jquery/js/jquery.mousewheel.min.js" %}'></script>
         <script src="{% static 'js/mustache/mustache.min.js' %}"></script>
         <script src="{{STATIC_URL}}js/flowplayer/flowplayer.min.js"></script>
 
