Only display sequence tool once it's done loading - PMT #109288

--- a/media/juxtapose/css/juxtapose.css
+++ b/media/juxtapose/css/juxtapose.css
@@ -17,7 +17,8 @@ button.jux-play span.glyphicon {
 
 #jux-container {
     width: 970px;
-    margin: 0 auto; 
+    margin: 0 auto;
+    display: none;
 }
 
 .react-grid-item {
