--- a/mediathread/templates/base.html
+++ b/mediathread/templates/base.html
@@ -210,6 +210,12 @@
                     <div class="quick-edit" style="display: none"></div>
                     <div class="collection-view"></div>
                 </div>
+                <div class="next-page-loader" style="display: none">
+                    <div>
+                        <img alt="Loading..." src="/media/img/ajax-loader-small.gif">
+                        Loading more items
+                    </div>
+                </div>
             </div><!-- /.modal-content -->
         </div><!-- /.modal-dialog -->
     </div><!-- /.modal -->
