--- a/media/templates/collectionwidget_assets.mustache
+++ b/media/templates/collectionwidget_assets.mustache
@@ -74,7 +74,7 @@
                     </a>
                 {{/editable}}
             </div>
-            <div class="pull-left">
+            <div class="record-asset-properties pull-left">
                 {{#citable}}
                     <span class="citationTemplate">
                         <img class="materialCitation clickableCitation" alt=""
