Add loading animation for sequence tool - PMT #109365

--- a/media/juxtapose/css/juxtapose.css
+++ b/media/juxtapose/css/juxtapose.css
@@ -429,3 +429,12 @@ button.jux-play span.glyphicon {
 .jux-timecode-editor input {
     width: 60px;
 }
+
+/* loader.css styles */
+#sequence .loader {
+    text-align: center;
+}
+
+#sequence .loader>.ball-pulse>div {
+    background-color: #555;
+}
